--- a/package.yaml
+++ b/package.yaml
@@ -28,6 +28,7 @@ dependencies:
 - parser-combinators
 - fixed-vector
 - multiset
+- memoize
 
 ghc-options:
 - -Wall
@@ -46,6 +47,7 @@ default-extensions:
 - ViewPatterns
 - MultiWayIf
 - QuasiQuotes
+- NamedFieldPuns
 
 executables:
   aoc2021:
