--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -35,6 +35,7 @@ library
       Day19
       Day20
       Day21
+      Day22
       Util
   other-modules:
       Paths_aoc2021
@@ -49,12 +50,13 @@ library
       MultiWayIf
       QuasiQuotes
       NamedFieldPuns
-  ghc-options: -Wall -Wno-incomplete-patterns -Wno-unused-do-bind -Wno-missing-signatures
+  ghc-options: -Wall -Wno-incomplete-patterns -Wno-unused-do-bind -Wno-missing-signatures -O2 -threaded -with-rtsopts=-N
   build-depends:
       JuicyPixels
     , arithmoi
     , array
     , base >=4.7 && <5
+    , bimap
     , containers
     , digits
     , fgl
@@ -62,6 +64,7 @@ library
     , gloss
     , lens
     , linear
+    , massiv
     , megaparsec
     , memoize
     , monad-loops
@@ -90,13 +93,14 @@ executable aoc2021
       MultiWayIf
       QuasiQuotes
       NamedFieldPuns
-  ghc-options: -Wall -Wno-incomplete-patterns -Wno-unused-do-bind -Wno-missing-signatures
+  ghc-options: -Wall -Wno-incomplete-patterns -Wno-unused-do-bind -Wno-missing-signatures -O2 -threaded -with-rtsopts=-N
   build-depends:
       JuicyPixels
     , aoc2021
     , arithmoi
     , array
     , base >=4.7 && <5
+    , bimap
     , containers
     , digits
     , fgl
@@ -104,6 +108,7 @@ executable aoc2021
     , gloss
     , lens
     , linear
+    , massiv
     , megaparsec
     , memoize
     , monad-loops
