--- a/aoc2021.cabal
+++ b/aoc2021.cabal
@@ -36,6 +36,7 @@ library
       Day20
       Day21
       Day22
+      Day23
       Util
   other-modules:
       Paths_aoc2021
@@ -50,9 +51,11 @@ library
       MultiWayIf
       QuasiQuotes
       NamedFieldPuns
+      FlexibleInstances
   ghc-options: -Wall -Wno-incomplete-patterns -Wno-unused-do-bind -Wno-missing-signatures -O2 -threaded -with-rtsopts=-N
   build-depends:
       JuicyPixels
+    , ansi-terminal
     , arithmoi
     , array
     , base >=4.7 && <5
@@ -62,6 +65,7 @@ library
     , fgl
     , fixed-vector
     , gloss
+    , hashable
     , lens
     , linear
     , massiv
@@ -71,10 +75,13 @@ library
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , random
     , scanf
     , split
+    , string-qq
     , transformers
+    , unordered-containers
     , vector
   default-language: Haskell2010
 
@@ -93,9 +100,11 @@ executable aoc2021
       MultiWayIf
       QuasiQuotes
       NamedFieldPuns
+      FlexibleInstances
   ghc-options: -Wall -Wno-incomplete-patterns -Wno-unused-do-bind -Wno-missing-signatures -O2 -threaded -with-rtsopts=-N
   build-depends:
       JuicyPixels
+    , ansi-terminal
     , aoc2021
     , arithmoi
     , array
@@ -106,6 +115,7 @@ executable aoc2021
     , fgl
     , fixed-vector
     , gloss
+    , hashable
     , lens
     , linear
     , massiv
@@ -115,9 +125,12 @@ executable aoc2021
     , mtl
     , multiset
     , parser-combinators
+    , pqueue
     , random
     , scanf
     , split
+    , string-qq
     , transformers
+    , unordered-containers
     , vector
   default-language: Haskell2010
